--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,6 @@
 <footer>
-  <ul class="menu clearfix">
-    <li>
-      <a href="/a-propos">À propos</a>
-    </li>
-    <li class="current">
-      <a href="/">Blogue</a>
-    </li>
-    <li>
-      <a href="/membres">Membres</a>
-    </li>
-    <li>
-      <a href="/contact">Contact</a>
-    </li>
-  </ul>
-  <ul class="menu secondary clearfix">
+  {% include menu.html %}
+  <ul class="menu secondary">
     <li>
       <a href="https://twitter.com/coopterritoires">Twitter</a>
     </li>
@@ -21,5 +8,5 @@
       <a href="https://github.com/territoires/">GitHub</a>
     </li>
   </ul>
-  <p class="copyright">© 2014 Coopérative Territoires</p>
+  <p class="copyright">© 2014 Coopérative Territoires. <a href="https://github.com/territoires/territoires.github.io">Code source</a> sur GitHub.</p>
 </footer>
