--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   {% include header.html %}
 
   <main class="container content" role="main">
-    <h1>Blogue</h1>
+    <h1>{{ page.header_title }}</h1>
 
     {{ content }}
   </main>
