--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,8 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="{{ site.description }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-
-  <!-- Custom CSS -->
   <link rel="stylesheet" href="{{ "/css/screen.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Inika:400,700|Chivo:400,900|Inconsolata:400,700" />
+  <script src="{{ "/js/scripts.js" | prepend: site.baseurl }}"></script>
 </head>
