--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
   <div class="container">
-    <div class="logo">
+    <div id="logo">
       <a href="/"><img src="/images/logo.png" alt="Logo Territoires"></a>
     </div>
     <p class="description">{{ site.description }}</p>
