--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -6,7 +6,7 @@
     <a href="/">Blogue</a>
   </li>
   <li{% if page.url == '/membres/' %} class="current"{% endif %}>
-    <a href="/membres">Membres</a>
+    <a href="/equipe">Equipe</a>
   </li>
   <li{% if page.url == '/contact/' %} class="current"{% endif %}>
     <a href="/contact">Contact</a>
