--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -43,15 +43,21 @@ header {
   background-image: url('../images/topo.png');
   background-attachment: fixed;
   
-  image-rendering:optimizeSpeed;             /* Legal fallback */
-  image-rendering:-moz-crisp-edges;          /* Firefox        */
-  image-rendering:-o-crisp-edges;            /* Opera          */
-  image-rendering:-webkit-optimize-contrast; /* Safari         */
-  image-rendering:optimize-contrast;         /* CSS3 Proposed  */
-  image-rendering:crisp-edges;               /* CSS4 Proposed  */
-  image-rendering:pixelated;                 /* CSS4 Proposed  */
-  -ms-interpolation-mode:nearest-neighbor;   /* IE8+           */
-
+  -webkit-box-shadow: 0px 0px 15px 2px rgba(15, 104, 104, 0.15);
+  -moz-box-shadow: 0px 0px 15px 2px rgba(15, 104, 104, 0.15);
+  box-shadow: 0px 0px 15px 2px rgba(15, 104, 104, 0.15);
+  
+  /* Pour éviter l'aliasing dans le T du logo. Volé de
+  http://stackoverflow.com/questions/3900436/image-scaling-by-css-is-there-a-webkit-alternative-for-moz-crisp-edges */
+  image-rendering:optimizeSpeed;
+  image-rendering:-moz-crisp-edges;
+  image-rendering:-o-crisp-edges;
+  image-rendering:-webkit-optimize-contrast;
+  image-rendering:optimize-contrast;
+  image-rendering:crisp-edges;
+  image-rendering:pixelated;
+  -ms-interpolation-mode:nearest-neighbor;
+  
   img {
     display: block;
   }
@@ -85,7 +91,7 @@ only screen and (min-resolution: 2dppx) {
     }
     
     .description {
-      padding-top: 215px;
+      padding-top: 32px;
       padding-bottom: 135px;
       font-size: 40px;
       line-height: 1.3;
@@ -104,8 +110,7 @@ only screen and (min-resolution: 2dppx) {
   }
   
   #logo {
-    width: 106px;
-    position: fixed;
+    width: 116px;
     z-index: 100;
   }
   
@@ -120,6 +125,14 @@ only screen and (min-resolution: 2dppx) {
   body.home {
     #logo {
       width: 219px;
+      transition-property: width, margin;
+      transition-duration: 0.5s;
+      transition-timing-function: ease;
+      
+      &.sticky {
+        width: 116px;
+        margin-left: -160px;
+      }
     }
     
     header .container {
@@ -130,6 +143,10 @@ only screen and (min-resolution: 2dppx) {
       padding-top: 260px;
       padding-bottom: 160px;
     }
+  }
+  
+  #logo {
+    position: fixed;
   }
   
   header .container {
