--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,5 +13,6 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="stylesheet" href="{{ "/css/screen.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Inika:400,700|Chivo:400,900|Inconsolata:400,700" />
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="{{ "/js/scripts.js" | prepend: site.baseurl }}"></script>
 </head>
