--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,8 @@
+{% if page.url contains '/en/' %}
+  {% assign language = 'en' %}
+{% else %}
+  {% assign language = 'fr' %}
+{% endif %}
 <!DOCTYPE html>
 <html>
 
@@ -9,7 +14,6 @@
 
   <main class="container content" role="main">
     <h1>{{ page.header_title }}</h1>
-
     {{ content }}
   </main>
 
