--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,9 @@
       <a href="https://twitter.com/coopterritoires">Twitter</a>
     </li>
     <li>
+      <a href="https://www.facebook.com/coopterritoires">Facebook</a>
+    </li>
+    <li>
       <a href="https://github.com/territoires/">GitHub</a>
     </li>
   </ul>
