--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
   <div class="container">
     <div id="logo">
-      <a href="/"><img src="/images/logo.png" alt="Logo Territoires"></a>
+      <a href="{% if language == 'en' %}/en{% else %}/{% endif %}"><img src="/images/logo.png" alt="Logo Territoires"></a>
     </div>
     <p class="description">
       {% if language == 'en' %}
